# dkex-railbird-dashboard

./: .gitignore  DEPLOY.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: refresh-data.yml
.streamlit/: config.toml
app/: dashboard.py
data/raw/: Daily_Market_Report_-__2026_06_11_.csv  Daily_Market_Report_-__2026_06_12_.csv  Daily_Market_Report_-__2026_06_13_.csv  Daily_Market_Report_-__2026_06_14_.csv  Daily_Market_Report_-__2026_06_15_.csv  Daily_Market_Report_-__2026_06_16_.csv  Daily_Market_Report_-__2026_06_17_.csv  Daily_Market_Report_-__2026_06_18_.csv  Daily_Market_Report_-__2026_06_19_.csv  Daily_Market_Report_-__2026_06_20_.csv  Daily_Market_Report_-__2026_06_21_.csv  Daily_Market_Report_-__2026_06_22_.csv  Daily_Market_Report_-__2026_06_23_.csv  Daily_Market_Report_-__2026_06_24_.csv  Daily_Market_Report_-__2026_06_25_.csv  Daily_Market_Report_-__2026_06_26_.csv  Daily_Market_Report_-__2026_06_27_.csv  Daily_Market_Report_-__2026_06_28_.csv  Daily_Market_Report_-__2026_06_29_.csv  Daily_Market_Report_-__2026_06_30_.csv  Daily_Market_Report_-__2026_07_01_.csv  Daily_Market_Report_-__2026_07_02_.csv  Daily_Market_Report_-__2026_07_03_.csv  Daily_Market_Report_-__2026_07_04_.csv  Daily_Market_Report_-__2026_07_05_.csv  Daily_Market_Report_-__2026_07_06_.csv  Daily_Market_Report_-__2026_07_07_.csv  Daily_Market_Report_-__2026_07_08_.csv  Daily_Market_Report_-__2026_07_09_.csv  (+89 more)
docs/: data.js  dkex_sports_breakdown.csv  index.html
scripts/: build_site_data.py
src/dkex/: __init__.py  (+6 more)
tests/: conftest.py  test_reports.py  test_symbols.py
